--- a/index.html
+++ b/index.html
@@ -1,34 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repository Directory Tree</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
+        :root {
+            --bg-color: #f4f4f9;
+            --container-bg: #fff;
+            --text-color: #333;
+            --hover-bg: #e6f0fa;
+            --accent-color: #3498db;
+            --icon-color: #e67e22;
+            --caret-color: #7f8c8d;
+            --shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        [data-theme="dark"] {
+            --bg-color: #1e1e2f;
+            --container-bg: #2d2d44;
+            --text-color: #e0e0e0;
+            --hover-bg: #3a3a5a;
+            --accent-color: #64b5f6;
+            --icon-color: #ffb74d;
+            --caret-color: #b0bec5;
+            --shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        }
+
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
+            background-color: var(--bg-color);
+            color: var(--text-color);
             margin: 0;
             padding: 20px;
             line-height: 1.6;
+            transition: all 0.3s ease;
         }
 
         .container {
             max-width: 800px;
             margin: 0 auto;
-            background: #fff;
+            background: var(--container-bg);
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            box-shadow: var(--shadow);
         }
 
         h1 {
-            font-size: 1.8em;
+            font-size: 2em;
             margin-bottom: 20px;
-            color: #2c3e50;
+            color: var(--text-color);
+        }
+
+        .theme-toggle {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background: none;
+            border: none;
+            font-size: 1.5em;
+            cursor: pointer;
+            color: var(--text-color);
+            transition: transform 0.2s;
+        }
+
+        .theme-toggle:hover {
+            transform: scale(1.1);
         }
 
         .tree {
@@ -37,7 +75,7 @@
         }
 
         .tree li {
-            margin: 5px 0;
+            margin: 8px 0;
         }
 
         .tree .dir {
@@ -45,36 +83,45 @@
             cursor: pointer;
             display: flex;
             align-items: center;
+            padding: 8px;
+            border-radius: 6px;
+            font-size: 1.2em;
+            transition: all 0.2s ease;
         }
 
         .tree .dir:hover {
-            color: #3498db;
+            background-color: var(--hover-bg);
+            transform: translateX(5px);
+        }
+
+        .tree .dir:active {
+            box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
         }
 
         .tree .file {
             display: flex;
             align-items: center;
+            padding: 8px;
+            border-radius: 6px;
+            font-size: 1.1em;
+            position: relative;
+            transition: all 0.2s ease;
+        }
+
+        .tree .file:hover {
+            background-color: var(--hover-bg);
+            transform: translateX(5px);
         }
 
         .tree .file a {
-            color: #555;
+            color: var(--text-color);
             text-decoration: none;
             margin-right: 10px;
         }
 
         .tree .file a:hover {
-            color: #3498db;
+            color: var(--accent-color);
             text-decoration: underline;
-        }
-
-        .tree .file .download-btn {
-            color: #27ae60;
-            cursor: pointer;
-            margin-left: 5px;
-        }
-
-        .tree .file .download-btn:hover {
-            color: #219653;
         }
 
         .tree ul {
@@ -88,41 +135,106 @@
         }
 
         .fa-folder,
-        .fa-file {
+        .fa-file,
+        .fa-file-alt,
+        .fa-file-code,
+        .fa-ellipsis-v {
             margin-right: 8px;
-            color: #e67e22;
-        }
-
-        .fa-file-code {
-            color: #8e44ad;
+            color: var(--icon-color);
         }
 
         .fa-caret-down,
         .fa-caret-right {
             margin-right: 5px;
-            color: #7f8c8d;
+            color: var(--caret-color);
         }
 
         .empty {
-            color: #7f8c8d;
+            color: var(--caret-color);
             font-style: italic;
+        }
+
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-btn {
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 1em;
+            color: var(--icon-color);
+            transition: transform 0.2s;
+        }
+
+        .dropdown-btn:hover {
+            transform: scale(1.1);
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            right: 0;
+            background-color: var(--container-bg);
+            box-shadow: var(--shadow);
+            border-radius: 6px;
+            z-index: 1;
+            min-width: 120px;
+        }
+
+        .dropdown-content a,
+        .dropdown-content button {
+            color: var(--text-color);
+            padding: 8px 12px;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            background: none;
+            border: none;
+            width: 100%;
+            text-align: left;
+            cursor: pointer;
+        }
+
+        .dropdown-content a:hover,
+        .dropdown-content button:hover {
+            background-color: var(--hover-bg);
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
         }
     </style>
 </head>
-
 <body>
+    <button class="theme-toggle" onclick="toggleTheme()">
+        <i class="fas fa-moon"></i>
+    </button>
     <div class="container">
         <h1>Repository Directory</h1>
         <ul class="tree" id="tree"></ul>
     </div>
     <script>
         // Configuration
-        const ignoredDirs = ['.git', 'node_modules', 'dist']; // Add directories to ignore
-        const ignoredExtensions = ['.git', '.jpg', '.png', '.gitignore']; // Add file extensions to ignore
-        const repoOwner = 'blacksmithop'; // Replace with your GitHub username
-        const repoName = 'interview-cookbook'; // Replace with your repository name
-        const repoPath = ''; // Optional: specific directory in repo, e.g., 'docs' (leave empty for root)
-        const GITHUB_TOKEN = ''; // Optional: Add your GitHub token here to bypass rate limits
+        const ignoredDirs = ['.git', 'node_modules', 'dist', 'data', 'script', '.venv'];
+        const ignoredExtensions = ['.git', '.jpg', '.png', '.gitignore', '.html'];
+        const repoOwner = 'blacksmithop';
+        const repoName = 'interview-cookbook';
+        const repoPath = '';
+        const GITHUB_TOKEN = undefined; // Optional token, leave undefined to skip authentication
+
+        // Icon to extension mapping
+        const fileIcons = {
+            '.ipynb': 'fa-file-code',  // Jupyter Notebook
+            '.md': 'fa-file-alt',     // Markdown
+            '.py': 'fa-file-code',    // Python
+            '.txt': 'fa-file',        // Text
+            '.js': 'fa-file-code',    // JavaScript
+            '.css': 'fa-file',        // CSS
+            '.html': 'fa-file-code',  // HTML
+            default: 'fa-file'        // Default for unknown types
+        };
 
         async function fetchRepoContents(path = '') {
             try {
@@ -130,17 +242,19 @@
                 const headers = {
                     'Accept': 'application/vnd.github.v3+json'
                 };
-                if (GITHUB_TOKEN) {
+                // Only add Authorization header if GITHUB_TOKEN is defined
+                if (GITHUB_TOKEN !== undefined) {
                     headers['Authorization'] = `token ${GITHUB_TOKEN}`;
                 }
                 const response = await fetch(url, { headers });
                 if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
+                    const errorDetails = await response.json();
+                    throw new Error(`HTTP error! status: ${response.status}, message: ${errorDetails.message}`);
                 }
                 const contents = await response.json();
                 return Array.isArray(contents) ? contents : [contents];
             } catch (error) {
-                console.error('Error fetching repository contents:', error);
+                console.error('Error fetching repository contents:', error.message);
                 return [];
             }
         }
@@ -185,18 +299,19 @@
             return tree.children.length > 0 ? tree : null;
         }
 
-        function renderTree(node, parentElement, basePath = '') {
+        function renderTree(node, parentElement, basePath = '', isRoot = false) {
             const li = document.createElement('li');
             if (node.type === 'directory') {
                 const dirDiv = document.createElement('div');
                 dirDiv.className = 'dir';
                 dirDiv.innerHTML = `
-                    <i class="fas fa-caret-right"></i>
+                    <i class="fas ${isRoot ? 'fa-caret-down' : 'fa-caret-right'}"></i>
                     <i class="fas fa-folder"></i>
                     ${node.name}
                 `;
                 li.appendChild(dirDiv);
                 const ul = document.createElement('ul');
+                if (isRoot) ul.classList.add('active');
                 node.children.forEach(child => {
                     renderTree(child, ul, `${basePath}${node.name}/`);
                 });
@@ -208,17 +323,20 @@
                     caret.classList.toggle('fa-caret-down');
                 });
             } else {
-                const fileExt = node.name.split('.').pop().toLowerCase();
-                const iconClass = fileExt === 'ipynb' ? 'fa-file-code' : 'fa-file';
+                const fileExt = '.' + node.name.split('.').pop().toLowerCase();
+                const iconClass = fileIcons[fileExt] || fileIcons.default;
                 li.className = 'file';
                 const fileUrl = `https://github.com/${repoOwner}/${repoName}/blob/main/${node.path}`;
-                const downloadBtn = node.downloadUrl ? `
-                    <i class="fas fa-download download-btn" data-url="${node.downloadUrl}" title="Download"></i>
-                ` : '';
                 li.innerHTML = `
                     <i class="fas ${iconClass}"></i>
                     <a href="${fileUrl}" target="_blank">${node.name}</a>
-                    ${downloadBtn}
+                    <div class="dropdown">
+                        <button class="dropdown-btn"><i class="fas fa-ellipsis-v"></i></button>
+                        <div class="dropdown-content">
+                            <a href="${fileUrl}" target="_blank"><i class="fas fa-eye"></i> View</a>
+                            ${node.downloadUrl ? `<button class="download-btn" data-url="${node.downloadUrl}"><i class="fas fa-download"></i> Download</button>` : ''}
+                        </div>
+                    </div>
                 `;
                 if (node.downloadUrl) {
                     li.querySelector('.download-btn').addEventListener('click', (e) => {
@@ -244,12 +362,21 @@
                 li.textContent = 'Empty';
                 treeElement.appendChild(li);
             } else {
-                renderTree(tree, treeElement);
+                renderTree(tree, treeElement, '', true);
             }
+        }
+
+        function toggleTheme() {
+            const html = document.documentElement;
+            const currentTheme = html.getAttribute('data-theme');
+            const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+            html.setAttribute('data-theme', newTheme);
+            const icon = document.querySelector('.theme-toggle i');
+            icon.classList.toggle('fa-moon');
+            icon.classList.toggle('fa-sun');
         }
 
         init();
     </script>
 </body>
-
 </html>
